app/Files/style.css
html {
    overflow: hidden;
    height: 100%;
    width: 100%;
}
body {
    height: 100%;
    width: 100%;
	background-color:#808080 !important;
	color: #e4e4e4 !important;

font-weight: bold !important;
}
#content {
    position: absolute;
    top: 10px;
    bottom: 10px;
    left: 10px;
    right: 10px;
}
#open-subwindow{
margin-top: 2px;


}
#pageNumber{
background-color:#e4e4e4;
border-color: #e4e4e4;
color: #808080;
}

#nextButton{
color: #808080;

}
#prevButton{

color: #808080;
}
.graph {
    width: 180px;
    height: 32px;
}
.search-item-cell {
    border: 1px solid #e4e4e4;
    width: 300px;
    margin: 1px;
    display: inline-block;
    border-radius: 4px;
    box-shadow: 0 0 6px #ccc;
}

.page-footer{
	height:34px;
}
.spinner-margin{
	padding-top:3px;
	padding-bottom:3px;
}
.none-list {
    list-style-type: none;
    padding-left: 0;
}
.item-img {
    vertical-align: middle;
	border-width: 3px;
	border-style: solid;
}
.item-name {
    display: inline-block;
    width: 210px;
    vertical-align: middle;
    padding: 0;
    margin: 0;
}
.item-level {
    white-space: nowrap;
}
.right-button {
    vertical-align: middle;
	padding-right: 7px !important;
	padding-left: 7px !important;
	margin-bottom: 3px;

}
/*Panel */

.panel{
	overflow-y: auto;
    height: 100x;
    border: 1px solid #e4e4e4;
    border-radius: 2px;
    box-shadow: 0 0 6px #ccc;
	margin-top:10px;
	margin-bottom:10px;
	background-color: #808080 !important;

}




/*  remove?*/
.resultContainer {
    overflow-y: auto;
    height: 300px;
    border: 1px solid #e4e4e4;
    border-radius: 2px;
    box-shadow: 0 0 6px #ccc;
	margin-top:10px;
	margin-bottom:10px;
}
.mainWindow-item-cell {
    border: 1px solid #e4e4e4;
    width: 300px;
    margin: 1px;
    display: inline-block;
    border-radius: 4px;
    box-shadow: 0 0 6px #ccc;
}
.buy-sell {
    /*
	width: 140px;
	height: 20px;
	*/
	padding-left: 0px !important;
	padding-right: 5px !important;
	
}

.graph-buysell {
    width: 300px;
    margin: 1px 0px ;
}
.buy-sell-prices {
	

    display: inline-block;
	    vertical-align: middle;

}



/*test Item*/

#watchlist-container {
    border: 1px solid #e4e4e4;
    border-radius: 2px;
    box-shadow: 0 0 6px #ccc;
    overflow-y: auto;
    height: 300px;
}
#watchListContents {
    position: absolute;
    top: 10px;
    bottom: 10px;
    left: 10px;
    right: 10px;
}


/*item color*/

.junk {
    color: #AAA !important;
}
.basic {
    color: #000 !important;
}
.fine {
    color: #62A4DA !important;
}
.masterwork {
    color: #1a9306 !important;
}
.rare {
    color: #fcd00b !important;
}
.exotic {
    color: #ffa405 !important;
}
.ascended {
    color: #fb3e8d !important;
}
.legendary {
    color: #4C139D !important;
}


/**
Altered Bootstrap
*/
.no-margin {
  margin:0 !important;
}
.no-padding {
  padding:0px !important;
}
.no-border {
  border:0px !important;
}
/***********************
  OUTLINE BUTTONS
************************/

.btnModified.outline {
    background: none;
    padding: 4px 6px;
}
.btnModified-primary.outline {
    border: 2px solid #e4e4e4;
    color: #e4e4e4;
}
.btnModified-primary.outline:hover,
.btnModified-primary.outline:focus,
.btnModified-primary.outline:active,
.btnModified-primary.outline.active,
.open > .dropdown-toggle.btnModified-primary {
    color: #cdcdcd;
    border-color: #cdcdcd;
}
.btnModified-primary.outline:active,
.btnModified-primary.outline.active {
    border-color: #b6b6b6;
    color: #b6b6b6;
    box-shadow: none;
}
/***********************
  CUSTON BTN VALUES
************************/

.btnModified {
    padding: 4px 6px;
    border: 0 none;
    font-size: 12px;
    letter-spacing: 1px;
    text-transform: uppercase;
}
.btnModified:focus,
.btnModified:active:focus,
.btnModified.active:focus {
    outline: 0 none;
}

.btnModifed-lg {
padding: 10px 16px;
font-size: 12px;
line-height: 1.3333333;
border-radius: 6px;}

.chart-div {
    padding: 1px 0px  !important;
    display: inline-block;

	vertical-align: middle;

}
::-webkit-scrollbar {
    width: 12px;
}
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
/* Handle */

::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: rgba(228, 228, 228, 228.8);
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}
::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(245, 245, 246, 228.4);
}


 
label.frequency-changer {
    position: relative;
    display: inline-block;
}

 .frequency-changer select {
        display: inline-block;
        border: 2px solid #e4e4e4;
        padding: 4px 6px 3px 5px;
        margin: 0;
        font-size: 12px;
        outline:none; /* remove focus ring from Webkit */
        line-height: 1.2;
        background: #808080;
		font-size: 12px;
		color: #e4e4e4;
        
        -webkit-appearance:none; /* remove the strong OSX influence from Webkit */
        
        -webkit-border-radius: 6px;
        -moz-border-radius: 6px;
        border-radius: 6px;
	
    }

    /* for Webkit's CSS-only solution */
    @media screen and (-webkit-min-device-pixel-ratio:0) { 
       .frequency-changer select {
          padding-right: 25px;   
        }
    }
    
    /* Since we removed the default focus styles, we have to add our own */
    .frequency-changer select:focus {
        -webkit-box-shadow: 0 0 2px 2px #b6b6b6;
        -moz-box-shadow: 0 0 2px 2px #b6b6b6;
        box-shadow: 0 0 2px 2px #b6b6b6;
		
    }
    
    /* Select arrow styling */
    .frequency-changer:after {
        content: "▼";
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        font-size: 60%;
        line-height: 30px;
        padding: 0 7px;
        background: #e4e4e4;
        color: #808080;
        
        pointer-events:none;
        
        -webkit-border-radius: 0 6px 6px 0;
        -moz-border-radius: 0 6px 6px 0;
        border-radius: 0 6px 6px 0;
    }
    
    .no-pointer-events .frequency-changer:after {
        content: none;
    }
	
	#header{
	margin-left:-15px;
	margin-right:-15px;
	
	}
	
	.fa-spin { -webkit-filter: blur(0); }
	
	
.spinner {
  opacity: 0;
  max-width: 0;

  -webkit-transition: opacity 0.25s, max-width 0.45s; 
  -moz-transition: opacity 0.25s, max-width 0.45s;
  -o-transition: opacity 0.25s, max-width 0.45s;
  transition: opacity 0.25s, max-width 0.45s; 
}


.spinner.active {
  opacity: 1;
  max-width: 50px; 
}

